hamburger menu added

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
         <div id="brand">
           <nav><a href="index.html">this Interiror</a></nav>
         </div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
         <div id="list">
           <nav>
-          <a href="#" class="link" >Home</a>
+          <a href="#" class="link active" >Home</a>
           <a href="#" class="link" >Collection</a>
           <a href="#" class="link" >About</a> 
           <a href="#" class="link" >Contact</a> 
@@ -71,5 +76,6 @@
       </div>
       <div id="footer">created by &nbsp; <a href="https://devchallenges.io/portfolio/LaxmanJonchhen12" id="footer__profile"> LaxmanJonchhen12</a> - devchallenges.io</div>
     </div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
